--- a/express-mongoose/.github/workflows/ci.yml
+++ b/express-mongoose/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
 
     - name: Keploy Tests
       id: keploy-run-test
+      working-directory: ./express-mongoose 
       run: |
         curl --silent -O -L https://keploy.io/install.sh && source install.sh
         sudo mkdir -p /usr/local/bin && sudo mv /tmp/keploy /usr/local/bin/keploy
-        cd express-mongoose
         npm install
         keploy test -c "node src/app.js"
